--- a/views/createpost.ejs
+++ b/views/createpost.ejs
@@ -1,4 +1,4 @@
-<%- include('partials/header.ejs')  %>
+<%- include('Partials/header.ejs')  %>
 
 <section class="form-section">
   <h1 class="title">
