--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,4 @@
-<%-include('partials/header.ejs')  %>
+<%-include('Partials/header.ejs')  %>
 <section class="intro-section">
   <div class="intro-content">
 
@@ -54,5 +54,5 @@
     </section>
 
 
-<%-include('partials/footer.ejs')  %>
+<%-include('Partials/footer.ejs')  %>
 
