Update Date handling

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -7,7 +7,7 @@
         <div class="about-intro">
           <p>Hi, I'm <strong>Bernard</strong>, a Python and Web Developer in training. I'm passionate about electrical power systems, coding, and creating web applications.</p>
         </div>
-        <p>Welcome to my website!I enjou web development, where I'm learning to build applicatins with python and Js.</p>
+        <p>Welcome to my website!I enjoy web development, where I'm learning to build applicatins with python and Js.</p>
         <p>I'm taking courses in Python and Web Development by Angela Yu, and I spend my days honing my skills in coding. When I'm not working on projects, I enjoy exercising. Feel free to connect with me if you'd like to know more!</p>
     </div>
 
